--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.2",
+    "@react-native-firebase/app": "^6.0.4",
+    "@react-native-firebase/auth": "^6.0.4",
     "react": "^16.10.2",
     "react-native": "0.61.2",
     "react-native-gesture-handler": "^1.4.1",
